Funciones pendientes, falta hacer funcionar el inventario

--- a/donacion/cliente/src/app/components/banco/banco.component.html
+++ b/donacion/cliente/src/app/components/banco/banco.component.html
@@ -10,9 +10,9 @@
     
   <nav>
     <div class="nav-wrapper" style="background-color: cadetblue;">
-      <a href="#" class="brand-logo">Logo</a>
+      <a  [routerLink]="['/enfermera']" class="brand-logo">Logo</a>
       <ul id="nav-mobile" class="right hide-on-med-and-down">
-        <li><a>Inicio</a></li>
+        <li><a [routerLink]="['/enfermera']">Inicio</a></li>
       </ul>
     </div>
   </nav>
