--- a/donacion/cliente/src/app/components/transfuciones/transfuciones.component.html
+++ b/donacion/cliente/src/app/components/transfuciones/transfuciones.component.html
@@ -42,7 +42,10 @@
                   <td>{{tranfucion.fecha}}</td>
               </tr>
               </tbody>
-              <a><i class="material-icons">person_add</i></a>
+              <a (click)="preparar()"><svg xmlns="http://www.w3.org/2000/svg" width="36" height="36" fill="currentColor" class="bi bi-send-plus-fill" viewBox="0 0 16 16" style="color: black;">
+                <path d="M15.964.686a.5.5 0 0 0-.65-.65L.767 5.855H.766l-.452.18a.5.5 0 0 0-.082.887l.41.26.001.002 4.995 3.178 1.59 2.498C8 14 8 13 8 12.5a4.5 4.5 0 0 1 5.026-4.47L15.964.686Zm-1.833 1.89L6.637 10.07l-.215-.338a.5.5 0 0 0-.154-.154l-.338-.215 7.494-7.494 1.178-.471-.47 1.178Z"/>
+                <path d="M16 12.5a3.5 3.5 0 1 1-7 0 3.5 3.5 0 0 1 7 0Zm-3.5-2a.5.5 0 0 0-.5.5v1h-1a.5.5 0 0 0 0 1h1v1a.5.5 0 0 0 1 0v-1h1a.5.5 0 0 0 0-1h-1v-1a.5.5 0 0 0-.5-.5Z"/>
+              </svg></a>
           </table>
       </section>
   </main>
@@ -51,7 +54,7 @@
         <div class="modal-dialog">
            <div class="modal-content">
            <div class="modal-header">
-             <h4 class="modal-title">Informacion Donadores</h4>
+             <h4 class="modal-title">Informacion Transfuciones</h4>
            </div>
            <div class="modal-body">
             <div class="container" id="formulario">
